<resources>
    <string name="app_name">My App Profile</string>

    <string name="action_settings">Settings</string>

    <string name="my_title">My Nanodegree Apps</string>

    <string name="media_streamer">Spotify Streamer</string>
    <string name="super_duo1">Scores App</string>
    <string name="super_duo2">Library App</string>
    <string name="ant_terminator">Build It Bigger</string>
    <string name="materialize">XYZ Reader</string>
    <string name="capstone">My Capstone App</string>

    <string name="click_on_button_toast">This button will launch %1$s!</string>
</resources>
