<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/udacity_lightblue"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_title"
            android:id="@+id/my_title"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="24sp"
            android:layout_marginBottom="@dimen/space_marginBottom" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media_streamer"
            android:id="@+id/media_streamer"
            android:layout_below="@+id/my_title"
            android:layout_centerHorizontal="true"
            android:background="@color/udacity_orange"
            android:width="@dimen/button_width"
            android:layout_marginBottom="@dimen/space_marginBottom"
            android:onClick="clickOnButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/super_duo1"
            android:id="@+id/super_duo1"
            android:layout_below="@+id/media_streamer"
            android:layout_centerHorizontal="true"
            android:background="@color/udacity_orange"
            android:width="@dimen/button_width"
            android:layout_marginBottom="@dimen/space_marginBottom"
            android:onClick="clickOnButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/super_duo2"
            android:id="@+id/super_duo2"
            android:layout_below="@+id/super_duo1"
            android:layout_centerHorizontal="true"
            android:background="@color/udacity_orange"
            android:width="@dimen/button_width"
            android:layout_marginBottom="@dimen/space_marginBottom"
            android:onClick="clickOnButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ant_terminator"
            android:id="@+id/ant_terminator"
            android:layout_below="@+id/super_duo2"
            android:layout_centerHorizontal="true"
            android:background="@color/udacity_orange"
            android:width="@dimen/button_width"
            android:layout_marginBottom="@dimen/space_marginBottom"
            android:onClick="clickOnButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/materialize"
            android:id="@+id/materialize"
            android:layout_below="@+id/ant_terminator"
            android:layout_centerHorizontal="true"
            android:background="@color/udacity_orange"
            android:width="@dimen/button_width"
            android:layout_marginBottom="@dimen/space_marginBottom"
            android:onClick="clickOnButton" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:id="@+id/capstone"
            android:layout_below="@+id/materialize"
            android:layout_centerHorizontal="true"
            android:background="@color/udacity_red"
            android:width="@dimen/button_width"
            android:layout_marginBottom="@dimen/space_marginBottom"
            android:onClick="clickOnButton" />
    </RelativeLayout>
</ScrollView>
